--- a/pendaftaran.css
+++ b/pendaftaran.css
@@ -49,6 +49,7 @@ header .back {
     outline: none;
     -webkit-box-reflect: below 5px linear-gradient(transparent, rgba(0, 0, 0, 1));
     cursor: pointer;
+    z-index: 5;
     transition: all 0.3s ease;
 }
 
@@ -77,6 +78,8 @@ header .container .items {
     top: 10%;
     margin-bottom: 10px;
     background-color: rgba(255, 255, 255, 0.2);
+    padding: 5px;
+    border-radius: 10px;
 }
 
 header .container .items .title {
