--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     --chelsea: #0157ba;
     --white: #fdfdfd;
     --black: #101010;
+    --yellow: #ffcc00;
 }
 
 * {
@@ -144,7 +145,7 @@ header .sidebar {
     width: 300px;
     min-height: 50%;
     padding: 20px 10px;
-    background-color: var(--ultramariane);
+    background-color: var(--chelsea);
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
     z-index: 1000;
@@ -253,18 +254,18 @@ header .container .box {
     justify-content: space-evenly;
     align-items: center;
     position: relative;
-    top: 5%;
+    top: 8%;
     padding: 10px;
-    box-shadow: inset -5px -5px 10px var(--black);
 }
 
 header .container .box h2 {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     text-transform: capitalize;
+    font-optical-sizing: auto;
     cursor: default;
     width: 200px;
     text-align: center;
-    font-family: pacifico;
+    font-family: "Yellowtail", cursive;
     font-weight: normal;
     color: var(--white);
 }
@@ -282,10 +283,10 @@ header .container .box .logo img {
     width: 100%;
     height: 100%;
     mix-blend-mode: screen;
-    animation: rotate 5s linear infinite;
+    animation: rotateY 5s linear infinite;
 }
 
-@keyframes rotate {
+@keyframes rotateY {
     from {
         transform: rotateY(0deg);
     }
@@ -359,31 +360,63 @@ header .container .menu {
 
 header .container .menu .slide {
     width: 100%;
-    height: 40vh;
+    height: 100%;
     display: flex;
     align-items: flex-start;
     justify-content: center;
     overflow-x: auto;
 }
 
-header .container .menu .slide .items {
+header .container .menu .slide .item {
+    display: flex;
+    flex: 0 0 auto;
+    flex-direction: column;
+    align-items: center;
+    cursor: pointer;
+    margin: 0 20px;
+    position: relative;
+}
+
+header .container .menu .slide .item .items {
     width: 100px;
     height: 100px;
     display: flex;
-    flex: 0 0 auto;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-radius: 20px;
-    position: relative;
-    top: 10%;
-    margin: 0 20px;
-    cursor: pointer;
+    transform: perspective(800px) rotateX(30deg) translateY(0);
+    overflow: hidden;
 }
 
-header .container .menu .slide .items .icon {
-    width: 100%;
-    height: 100%;
+header .container .menu .slide .item .items::before {
+    content: '';
+    width: 130%;
+    height: 50%;
+    position: absolute;
+    top: 25%;
+    background-color: yellow;
+    z-index: -10;
+    animation: rotate 2s linear infinite;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+header .container .menu .slide .item .items::before .icon:hover {
+    display: none;
+}
+
+header .container .menu .slide .item .items .icon {
+    width: 95%;
+    height: 95%;
     border-radius: inherit;
     background-color: var(--pantoneBlue);
     box-shadow: inset -5px -5px 10px var(--black);
@@ -392,42 +425,39 @@ header .container .menu .slide .items .icon {
     align-items: center;
     position: relative;
     z-index: 1;
-    transform: perspective(800px) rotateX(30deg) translateY(0);
     transition: transform 0.4s ease;
 }
 
-header .container .menu .slide .items .icon::before {
+/* header .container .menu .slide .items .icon::before {
     content: '';
-    width: 100%;
-    height: 100%;
+    width: 10%;
+    height: 50%;
     position: absolute;
-    background: transparent;
-    border-bottom: 4px solid cyan;
-    border-radius: inherit;
-    z-index: 0;
-    transform: perspective(800px) rotateX(30deg);
-    opacity: 0;
-    transition: all 0.4s ease;
-}
+    top: 25%;
+    background-color: yellow;
+    z-index: -10;
+    animation: rotate 2s linear infinite;
+} */
 
-header .container .menu .slide .items .icon:hover {
+/* header .container .menu .slide .items .icon:hover {
     transform: perspective(800px) rotateX(30deg) translateY(-20px);
-}
+} */
 
-header .container .menu .slide .items .icon:hover::before {
+/* header .container .menu .slide .items .icon:hover::before {
     opacity: 1;
     transform: perspective(800px) rotateX(30deg) translateY(20px);
     filter: drop-shadow(0 0 5px cyan) drop-shadow(0 0 7px cyan);
-}
+} */
 
 header .container .menu .slide .items i {
     color: var(--white);
     font-size: 2rem;
 }
 
-header .container .menu .slide .items span {
+header .container .menu .slide .item span {
     position: absolute;
-    bottom: -60%;
+    z-index: 2;
+    bottom: -55%;
     background-color: var(--pantoneBlue);
     color: var(--white);
     text-align: center;
@@ -437,7 +467,7 @@ header .container .menu .slide .items span {
     border-radius: 5px;
 }
 
-header .container .menu .slide .items:last-child span {
+header .container .menu .slide .item:last-child span {
     text-transform: uppercase;
 }
 
@@ -460,7 +490,7 @@ header .container .menu .slide .items:last-child span {
         height: 20vh;
     }
 
-    header .container .menu .slide .items {
+    header .container .menu .slide .item .items {
         width: 80px;
         height: 80px;
     }
