--- a/style.css
+++ b/style.css
@@ -399,8 +399,11 @@ header .container .menu .slide .item .items::before {
     height: 50%;
     position: absolute;
     top: 25%;
-    background-color: yellow;
-    z-index: -10;
+    background-color: var(--yellow);
+    box-shadow: 0 0 5px var(--yellow),
+        0 0 10px var(--yellow),
+        0 0 15px var(--yellow);
+    z-index: -1;
     animation: rotate 2s linear infinite;
 }
 
